0030705: Visualization, TKOpenGl - stipple line GLSL error on using OpenGL 2.1 + GL_EXT_gpu_shader4 extension on macOS

Fix compatibility with pure GL_EXT_gpu_shader4 specs by defining "uint" as "unsigned int".